# auth-server

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  docker-compose.yml  dockerfile  endpoints.md  entrypoint.sh  example-redis.conf  example.env  init-db.sh  init.sql
.github/workflows/: main.yml  rust.yml
auto-encryption/: Cargo.toml
auto-encryption/src/: lib.rs
encryption-libs/: Cargo.toml
encryption-libs/src/: encryption_tests.rs  lib.rs
migrations/2024-04-29-132928_create_user_tables/: down.sql  up.sql
migrations/2024-12-15-194646_create_admin/: up.sql
src/: app.rs  auth.rs  controllers.rs  lib.rs  main.rs  smtp.rs
src/client/: admin_pages.rs  auth_pages.rs  client_helpers.rs  mod.rs
src/db/: admins_table.rs  api_keys_table.rs  db_helper.rs  mod.rs  models.rs  oauth_clients_table.rs  refresh_tokens_table.rs  reset_token_table.rs  schema.rs  users_db.rs  verification_tokens_table.rs
src/server/: actors.rs  admin_handlers.rs  auth_functions.rs  auth_handlers.rs  mod.rs  oauth_handlers.rs  smtp.rs
style/: main.scss
