[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = { version = "0.6.6"}
actix-web = { version = "4.9.0", features = ["macros"] }
console_error_panic_hook = "0.1.7"
http = { version = "1.1.0"}
wasm-bindgen = "=0.2.95"
actix-session = { version = "0.10.1", features = ["redis-session"]}
actix-identity = {version = "0.8.0"}
diesel = { version = "2.2.4", features = ["postgres"]}
dotenvy = { version = "0.15.7"}
true = { version = "0.1.0"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
cfg-if = "1.0.0"
argon2 = "0.5.3"
lazy_static = { version = "1.5.0"}
regex = { version = "1.11.1"}
chrono = "0.4.38"
rand = "0.8.5"
lettre ={version = "0.11.10"}
maud = {version = "0.26.0"}
aes-gcm = "0.10.3"
hex = "0.4.3"
totp-rs = { version = "5.6.0", features = ["qr"] }
tokio = { version = "1.41.1", features = ["full"] }

