[package]
name = "auth-server"
version = "0.1.3"
edition = "2021"

[dependencies]
actix-files = { version = "0.6.6"}
actix-web = { version = "4.9.0", features = ["macros", "openssl"] }
console_error_panic_hook = "0.1.7"
http = { version = "1.1.0"}
actix-session = { version = "0.10.1", features = ["redis-session"]}
actix-identity = {version = "0.8.0"}
diesel = { version = "2.2.4", features = ["postgres", "r2d2"]}
dotenvy = { version = "0.15.7"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
cfg-if = "1.0.0"
argon2 = "0.5.3"
lazy_static = { version = "1.5.0"}
regex = { version = "1.11.1"}
chrono = "0.4.38"
rand = "0.8.5"
lettre ={version = "0.11.10"}
maud = {version = "0.26.0"}
aes-gcm = "0.10.3"
hex = "0.4.3"
totp-rs = { version = "5.6.0", features = ["qr"] }
tokio = { version = "1.41.1", features = ["full"] }
jsonwebtoken = "9.3.0"
env_logger = {version = "0.11.5"}
log = {version = "0.4.22"}
thiserror = {version = "2.0.6"}
clap = {version = "4.5.21", features = ["derive"]}
redis = "0.27.5"
openssl = { version = "0.10" }
base64 = "0.22.1"
serial_test = "3.2.0"
r2d2 = "0.8.10"

