[package]
name = "encryption-libs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7"}
darling = "0.20.10"
quote = "1.0"
proc-macro2 = "1.0.92"
aes-gcm = "0.10.3"
hex = "0.4.3"
argon2 = "0.5.3"
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
rand = { version = "0.8.5", features = ["std"] }
zeroize = "1.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
redis = {version = "0.27.6"}
